--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
       action="https://mate-academy-form-lesson.herokuapp.com/create-application"
       method="POST"
       onsubmit="onSubmit()"
+      class="form"
       >
-      <fieldset class="PersonalInformation">
+      <fieldset class="PersonalInformation fieldset">
         <legend>Personal information</legend>
         <div class="form-field">
           <label for="surname">Surname:</label>
@@ -64,7 +65,7 @@
           >
         </div>
       </fieldset>
-      <fieldset class="Registration">
+      <fieldset class="Registration fieldset">
         <legend>Registration</legend>
         <div class="form-field">
           <label for="email">E-mail:</label>
@@ -88,7 +89,7 @@
           >
         </div>
       </fieldset>
-      <fieldset class="IntrestingFact">
+      <fieldset class="IntrestingFact fieldset">
         <legend>An interesting fact about you!</legend>
         <div class="form-field">Do you love cats?
           <label for="yes">Yes</label>
@@ -141,7 +142,7 @@
           >
         </div>
       </fieldset>
-      <fieldset class="AdditionalInfo">
+      <fieldset class="AdditionalInfo fieldset">
         <legend>Additional info:</legend>
         <div class="form-field">
           <label for="comment">Comments:</label>
